# classification_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  common.hpp  detect.cpp  predict.cpp
