
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(MxnetTest)
# 增加opencv的依赖
FIND_PACKAGE( OpenCV REQUIRED )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)

